Update, create a separate class.

--- a/GrodnoTrolleybusTimetableConverter/GrodnoTrolleybusTimetableConverter.csproj
+++ b/GrodnoTrolleybusTimetableConverter/GrodnoTrolleybusTimetableConverter.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Converter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TrolleybusesTimetableOfOperarorConverter.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
